# solstice

./: .gitignore  LICENSE  README.md  host_ip.txt  justfile
.github/workflows/: build.yml  main.yml
crates/daemon/: Cargo.toml
crates/daemon/src/: firewall.rs  main.rs  sftp.rs  ssh.rs
crates/impersonate/: Cargo.toml
crates/impersonate/src/: lib.rs  process_list.rs
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs  pelib.rs  utils.rs  windows.rs
crates/payload_server/: Cargo.toml
crates/payload_server/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/shellcode_gen/: Cargo.toml  gs_exploit_template.txt  gs_exploit_template_network.txt
crates/shellcode_gen/src/: main.rs
crates/shellcode_stage1/: Cargo.toml
crates/shellcode_stage1/src/: main.rs
crates/shellcode_stage1_network/: Cargo.toml
crates/shellcode_stage1_network/src/: main.rs
crates/shellcode_stage2/: Cargo.toml
crates/shellcode_stage2/.cargo/: config.toml
crates/shellcode_stage2/src/: main.rs
crates/shellcode_utils/: Cargo.toml
crates/shellcode_utils/src/: alloc.rs  allocators.rs  binds.rs  file.rs  functions.rs  lib.rs  prelude.rs
crates/solstice_daemon/: Cargo.toml
crates/solstice_daemon/src/: firewall.rs  main.rs  sftp.rs  ssh.rs  toast.rs  winrt.rs
crates/solstice_loader/: Cargo.toml  README.md
crates/solstice_loader/src/: lib.rs  pelib.rs
crates/test_program/: Cargo.toml
crates/test_program/src/: main.rs
crates/test_program_rust/: Cargo.toml
crates/test_program_rust/src/: main.rs
loader/: Cargo.toml  LICENSE
loader/examples/: putty.rs
loader/src/: test.rs
shellcode_stage1/: Cargo.toml
shellcode_stage1/src/: main.rs
shellcode_stage2/: Cargo.toml
shellcode_stage2/src/: main.rs
shellcode_utils/src/: alloc.rs  consts.rs  functions.rs  prelude.rs
src/: main.rs
test_program/: Cargo.toml
