[package]
name = "impersonate"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
windows = { version = "0.58.0", features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Com",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices"
] }

[features]
default = []

