[package]
name = "solstice_loader"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["exploits.forsale"]
description = "Reflective PE loader library"
readme = "README.md"
repository = "https://github.com/exploits-forsale/solstice"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang/compiler-builtins"
default-features = false
features = ["mem"]

[dependencies.windows-sys]
features = [
    # Required for PEB/TEB
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Kernel",
    # Required for PE structs
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    # For VirtualAlloc constants
    "Win32_System_Memory",
    # For LDR_DATA_TABLE_ENTRY
    "Win32_System_WindowsProgramming",

    # For imports in non-shellcode mode
    "Win32_Security",
    "Win32_System_LibraryLoader",
]
version = "0.52.0"
default-features = false

[dependencies.shellcode_utils]
path = "../shellcode_utils"

[features]
shellcode_compat = []
