[package]
name = "shellcode_stage1"
version = "0.1.0"
authors = ["b1tg <b1tg@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellcode_utils = { path = "../shellcode_utils" }

[profile.dev]
panic = "abort"
# these two cut code size by 2/3
opt-level = "z"
lto = true

[profile.release]
panic = "abort"
# these two cut code size by 2/3
opt-level = "z"
lto = true

[dependencies.num]
version = "0.4"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[features]
default = []
debug = []
