[package]
name = "shellcode_stage1"
version = "0.1.0"
authors = ["exploits.forsale"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellcode_utils = { path = "../shellcode_utils" }

[profile.dev]
panic = "abort"
# these two cut code size by 2/3
opt-level = "z"
lto = true

[profile.release]
panic = "abort"
# these two cut code size by 2/3
opt-level = "z"
lto = true

[features]
default = []
debug = []
