[package]
name = "shellcode_stage1_network"
version = "0.1.0"
authors = ["exploits.forsale"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellcode_utils = { path = "../shellcode_utils" }

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang/compiler-builtins"
features = ["mem"]

[dependencies.windows-sys]
version = "0.59.0"
default-features = false
features = ["Win32_Networking_WinSock"]

[profile.dev]
panic = "abort"
# these two cut code size by 2/3
opt-level = "z"
lto = true

[profile.release]
panic = "abort"
# these two cut code size by 2/3
opt-level = "z"
lto = true

[features]
default = []
debug = []
