[package]
name = "shellcode_stage2"
version = "0.1.0"
authors = ["exploits.forsale"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
# these two cut code size by 2/3
opt-level = "z"
lto = true

[profile.release]
panic = "abort"
# these two cut code size by 2/3
opt-level = "z"
lto = true

[dependencies.shellcode_utils]
path = "../shellcode_utils"

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang/compiler-builtins"

[dependencies.solstice_loader]
path = "../solstice_loader"
features = ["shellcode_compat"]

[features]
default = []
debug = []
