[package]
name = "shellcode_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
paste = "1.0"

[dependencies.num]
version = "0.4"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.windows-sys]
version = "0.52.0"
default-features = false
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_Networking_WinSock",
]

[features]
default = ["alloc"]
alloc = []
