[package]
name = "solstice_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
portable-pty = "0.8.1"
rand_core = { version = "0.6.4", features = ["std"] }
russh = "0.44"
russh-keys = "0.44.0"
russh-sftp = "2.0.3"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "local-time",
    "time",
    "env-filter",
] }
windows = { version = "0.58.0", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_NetworkManagement_WindowsFirewall",

    # For WFP
    "Win32_Security",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_System_Rpc",

    # WinRT
    "Data_Xml_Dom",
    "UI_Notifications",
] }
impersonate = { path = "../impersonate" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = []
firewall = []
